// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformations 1`] = `
Object {
  "caseloadType": "SEX_OFFENSE",
  "currentPeriodStatuses": Object {
    "FAR": Array [
      Object {
        "metricId": "absconsions_bench_warrants",
        "previousPeriodValues": Array [
          Object {
            "endDate": 2023-04-01T00:00:00.000Z,
            "rate": 0.06283,
            "status": "NEAR",
          },
          Object {
            "endDate": 2023-05-01T00:00:00.000Z,
            "rate": 0.088881,
            "status": "NEAR",
          },
          Object {
            "endDate": 2023-06-01T00:00:00.000Z,
            "rate": 0.109407,
            "status": "FAR",
          },
          Object {
            "endDate": 2023-07-01T00:00:00.000Z,
            "rate": 0.110487,
            "status": "FAR",
          },
          Object {
            "endDate": 2023-08-01T00:00:00.000Z,
            "rate": 0.154553,
            "status": "FAR",
          },
        ],
        "rate": 0.1604677745537677,
        "status": "FAR",
      },
      Object {
        "metricId": "incarceration_starts",
        "previousPeriodValues": Array [
          Object {
            "endDate": 2023-04-01T00:00:00.000Z,
            "rate": 0.023395936157938592,
            "status": "MET",
          },
        ],
        "rate": 0.01986070301447383,
        "status": "FAR",
      },
    ],
    "MET": Array [],
    "NEAR": Array [
      "incarceration_starts_technical_violation",
    ],
  },
  "displayName": "Duke Ellington",
  "district": "D1",
  "externalId": "so1",
  "fullName": Object {
    "givenNames": "Duke",
    "middleNames": undefined,
    "surname": "Ellington",
  },
  "supervisorId": "mdavis123",
}
`;

exports[`transformations 2`] = `
Object {
  "caseloadType": "GENERAL_OR_OTHER",
  "currentPeriodStatuses": Object {
    "FAR": Array [],
    "MET": Array [
      "absconsions_bench_warrants",
    ],
    "NEAR": Array [
      "incarceration_starts",
      "incarceration_starts_technical_violation",
    ],
  },
  "displayName": "Chet Baker",
  "district": "D1",
  "externalId": "so2",
  "fullName": Object {
    "givenNames": "Chet",
    "middleNames": undefined,
    "surname": "Baker",
  },
  "supervisorId": "mdavis123",
}
`;

exports[`transformations 3`] = `
Object {
  "caseloadType": "GENERAL_OR_OTHER",
  "currentPeriodStatuses": Object {
    "FAR": Array [
      Object {
        "metricId": "absconsions_bench_warrants",
        "previousPeriodValues": Array [
          Object {
            "endDate": 2023-04-01T00:00:00.000Z,
            "rate": 0.154553,
            "status": "FAR",
          },
          Object {
            "endDate": 2023-05-01T00:00:00.000Z,
            "rate": 0.109407,
            "status": "FAR",
          },
          Object {
            "endDate": 2023-06-01T00:00:00.000Z,
            "rate": 0.12125238767544223,
            "status": "FAR",
          },
          Object {
            "endDate": 2023-07-01T00:00:00.000Z,
            "rate": 0.1466368227731864,
            "status": "FAR",
          },
          Object {
            "endDate": 2023-08-01T00:00:00.000Z,
            "rate": 0.110487,
            "status": "FAR",
          },
        ],
        "rate": 0.11521464646464646,
        "status": "FAR",
      },
    ],
    "MET": Array [
      "incarceration_starts_technical_violation",
    ],
    "NEAR": Array [
      "incarceration_starts",
    ],
  },
  "displayName": "Louis Armstrong",
  "district": "D1",
  "externalId": "so3",
  "fullName": Object {
    "givenNames": "Louis",
    "middleNames": undefined,
    "surname": "Armstrong",
  },
  "supervisorId": "mdavis123",
}
`;

exports[`transformations 4`] = `
Object {
  "caseloadType": "GENERAL_OR_OTHER",
  "currentPeriodStatuses": Object {
    "FAR": Array [
      Object {
        "metricId": "absconsions_bench_warrants",
        "previousPeriodValues": Array [
          Object {
            "endDate": 2023-04-01T00:00:00.000Z,
            "rate": 0.098509819,
            "status": "FAR",
          },
          Object {
            "endDate": 2023-05-01T00:00:00.000Z,
            "rate": 0.094708509819,
            "status": "FAR",
          },
          Object {
            "endDate": 2023-06-01T00:00:00.000Z,
            "rate": 0.0843280708509819,
            "status": "FAR",
          },
          Object {
            "endDate": 2023-07-01T00:00:00.000Z,
            "rate": 0.1018842831,
            "status": "FAR",
          },
          Object {
            "endDate": 2023-08-01T00:00:00.000Z,
            "rate": 0.11247207457052615,
            "status": "FAR",
          },
        ],
        "rate": 0.10630035918842831,
        "status": "FAR",
      },
    ],
    "MET": Array [
      "incarceration_starts_technical_violation",
    ],
    "NEAR": Array [
      "incarceration_starts",
    ],
  },
  "displayName": "William James \\"Count\\" Basie",
  "district": null,
  "externalId": "so4",
  "fullName": Object {
    "givenNames": "William James",
    "middleNames": "\\"Count\\"",
    "surname": "Basie",
  },
  "supervisorId": "bholiday456",
}
`;
